--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,29 @@
   justify-content: center;
   height: 100vh;
 }
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+
+  label {
+    margin-top: 20px;
+  }
+
+  input {
+    margin-top: 10px;
+    padding: 10px;
+  }
+
+  button {
+    margin-top: 20px;
+    padding: 10px 20px;
+    background-color: #1e90ff;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+}
+
